# RandomPermutation

./: .gitignore  CMakeLists.txt  main.cpp
prm/: EwensPermutation.h  MallowsPermutation.h  Permutation.h  Permutation_dfn.h  SpeedTest.cpp  SpeedTest.h  Tools.cpp  Tools.h  UniformPermutation.h
prm/extra/: SpeedTest.cpp  SpeedTest.h  Tools.cpp  Tools.h
prm/impl/: Con.cpp  Con.h  CopyAsVector.h  CopyIntoContainer.h  EwensPermutationImpl.h  MallowsBase.cpp  MallowsBase.h  MallowsImpl.h  MallowsPermutationImpl.h  MallowsQGreaterThanOne.h  MallowsQGreaterThenOneBase.cpp  MallowsQGreaterThenOneBase.h  MallowsQLessThanOne.h  MallowsQLessThanOneBase.cpp  MallowsQLessThanOneBase.h  Math.h  UniformPermutation.h  UniformPermutationImpl.h  UniformZeroOneGenerator.cpp  UniformZeroOneGenerator.h
